@@ -1290,6 +1290,12 @@
 					RelativePath=".\CSkyBoxSceneNode.h">
 				</File>
 				<File
+					RelativePath=".\CSphereSceneNode.cpp">
+				</File>
+				<File
+					RelativePath=".\CSphereSceneNode.h">
+				</File>
+				<File
 					RelativePath="CTerrainSceneNode.cpp">
 				</File>
 				<File
